# simple-timer

./: CMakeLists.txt  LICENSE  README.md  main.cpp  timer.hpp
include/: timer.hpp
